--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@ src="https://www.facebook.com/tr?id=1504686794036104&ev=PageView&noscript=1"
 </head>
 <body>
   <div class="container">
-    <div class="logo-wrapper">
+    <div class="logo-wrapper" autoplay
+        muted
+        loop
+        playsinline>
       <video class="logo-video" autoplay muted loop playsinline>
     <source src="video/intro.mp4" type="video/mp4">
   </video>
@@ -35,5 +38,15 @@ src="https://www.facebook.com/tr?id=1504686794036104&ev=PageView&noscript=1"
     <h1>Мужская одежда оптом</h1>
     <a href="https://t.me/+2ONd1QEBpqo1N2Nk" class="btn">Присоединиться к Telegram-каналу</a>
   </div>
+
+  <script>
+document.addEventListener('touchstart', function () {
+  const video = document.querySelector('.logo-video');
+  if (video && video.paused) {
+    video.play();
+  }
+}, { once: true });
+</script>
+
 </body>
 </html>
