--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>VANGUARD-WHOLESALE Мужская одежда оптом</title>
+  <title>VANGUARD WHOLESALE Мужская одежда оптом</title>
   <link rel="icon" type="image/svg+xml" href="img/icon.svg">
   <link rel="stylesheet" href="style.css">
   <!-- Meta Pixel Code -->
@@ -26,27 +26,11 @@ src="https://www.facebook.com/tr?id=1504686794036104&ev=PageView&noscript=1"
 </head>
 <body>
   <div class="container">
-    <div class="logo-wrapper" autoplay
-        muted
-        loop
-        playsinline>
-      <video class="logo-video" autoplay muted loop playsinline>
-    <source src="video/intro.mp4" type="video/mp4">
-  </video>
-      <!-- <img src="img/logo.jpg" alt="" class="logo"> -->
+    <div class="logo-wrapper">
+      <img src="img/logo_vw.png" alt="Boost-poker" class="logo">
     </div>
     <h1>Мужская одежда оптом</h1>
     <a href="https://t.me/+2ONd1QEBpqo1N2Nk" class="btn">Присоединиться к Telegram-каналу</a>
   </div>
-
-  <script>
-document.addEventListener('touchstart', function () {
-  const video = document.querySelector('.logo-video');
-  if (video && video.paused) {
-    video.play();
-  }
-}, { once: true });
-</script>
-
 </body>
 </html>
